# Google-Scholar-Scraping

./: API.ipynb  CNKI_API.py  Google_Scholar_API.py  README.md  exemple.html  lien_recherche.py  occurences.py  ppt_Zaghrini_Coutaux.pptx  setup.cfg  setup.py  syn.py  telecharge_pdf.py  totext.py
ressources/: requirements.txt
rst/: CNKI_API.py  occurences.py
rst.tests/: testfile.html
